--- a/calculadora/src/main/res/layout/activity_main.xml
+++ b/calculadora/src/main/res/layout/activity_main.xml
@@ -121,7 +121,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/decimal"
+            android:text="@string/dos"
             android:textSize="36sp" />
 
         <Button
@@ -177,6 +177,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:clickable="true"
             android:text="@string/suma"
             android:textSize="36sp" />
     </LinearLayout>
