--- a/resthelloworld2/src/main/res/layout/activity_main.xml
+++ b/resthelloworld2/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:layout_constraintGuide_begin="94dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/ListCamareros"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -30,6 +30,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:tag="1"
         android:text="@string/camarero"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
@@ -51,7 +52,7 @@
         app:layout_constraintGuide_begin="276dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/ListProductos"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -60,6 +61,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:tag="2"
         android:text="@string/productos"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -67,7 +69,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/ListPedidos"
         android:layout_width="108dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -76,6 +78,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:tag="3"
         android:text="@string/pedidos"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
